--- a/bai12_1..html
+++ b/bai12_1..html
@@ -4,12 +4,22 @@
 <meta charset="utf-8">
 <title>Untitled Document</title>
 <style>
+	html {
+		background: url(./hinh.jpg);
+		background-size: cover;
+		background-repeat: no-repeat;
+	}
 	table {
 		background-color: azure;
+		border-radius: 4px;
+		padding: 4px;
 	}
 	.form {
 		display: flex;
 		justify-content: center;
+	}
+	caption {
+		color: white;
 	}
 </style>
 </head>
