--- a/bai16.html
+++ b/bai16.html
@@ -34,7 +34,7 @@
 					<div class="title">Trầu cau</div>
 					<table>
 						<tr>
-							<td><img src="./jinshi-jinxi.gif" alt=""></td>
+							<td><img src="./traucau.webp" alt=""></td>
 							<td><p>Tình yêu là gì? Là ta yêu một người mỗi ngày trong một năm. Mỗi năm trong một đời người</p></td>
 						</tr>
 					</table>
@@ -51,7 +51,7 @@
 					<div class="title">10 lời khuyên trong dinh dưỡng</div>
 					<table>
 						<tr>
-							<td><img src="./jinshi-jinxi.gif" alt=""></td>
+							<td><img src="./đinhuong.webp" alt=""></td>
 							<td><p>Cơ thể chúng ta cần nhiều chất dinh dưỡng từ nhiều nguồn lương thực khác nhau. Vì vậy chúng ta nên thay đổi các loại lương thực khác nhau. Chúng ta không cần kiêng chi cả - quan trọng là chú ý đến số lượng...</p></td>
 						</tr>
 					</table>
