--- a/bai6.html
+++ b/bai6.html
@@ -3,6 +3,19 @@
 <head>
 <meta charset="utf-8">
 <title>Bai 6</title>
+<style>
+	body::after {
+		content: "";
+		position: absolute;
+		top: 0; left: 0; right: 0; bottom: 0;
+		background-image: url(./thuonghai.jpg);
+		background-size: cover;
+		background-position: center;
+		opacity: 0.3; /* Mức mờ */
+		z-index: -1;
+		pointer-events: none;
+	}
+</style>
 </head>
 
 <body>
