--- a/bai7.html
+++ b/bai7.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-	<img src="./jinshi-jinxi.gif" alt="" style="float: left">
+	<img src="./hoahong.avif" alt="" style="float: left; width: 200px; height: 200px;">
 	<div>
 		<h1>Công ty hoa tươi Nhân Ái</h1>
 		<ol style="margin-left: 200px">
