--- a/bai8.html
+++ b/bai8.html
@@ -9,7 +9,7 @@
 <body>
 	<table width="100%">
 		<tr>
-			<td width="25%" align="center"><img src="./ccxh.jpg" alt="" width="379" height="247"></td>
+			<td width="25%" align="center"><img src="./mongngon.webp" alt="" width="379" height="247"></td>
 			<td width="75%">
 				<div>
 					<h1 align="center">Các món ngon Hà Nội</h1>
