--- a/bai13_1.html
+++ b/bai13_1.html
@@ -5,7 +5,7 @@
 <title>Untitled Document</title>
 <style>
 	html {
-		background-color: tan;
+		background-image: url(./dulich.jpg);
 	}
 	.form {
 		display: flex;
