--- a/bai3.html
+++ b/bai3.html
@@ -3,9 +3,39 @@
 <head>
 <meta charset="utf-8">
 <title>Định dạng trang web</title>
+<style>
+  html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+  }
+
+  body {
+    position: relative;
+    color: white;
+    background-color: #A06d21;
+    overflow: hidden;
+  }
+
+  body::before {
+    content: "";
+    position: absolute;
+    top: 0; left: 0; right: 0; bottom: 0;
+    background-image: url('./vanly.jpg'); /* Ảnh nền mờ */
+    background-size: cover;
+    background-position: center;
+    opacity: 0.4;
+    z-index: -1;
+  }
+
+  .content {
+    padding: 20px;
+  }
+</style>
+
 </head>
 
-<body style="color: white; background-color: #A06d21; background-position: center; background-repeat: no-repeat; background-image: url(./jinshi-jinxi.gif); background-size: 30%">
+<body>
 	<h1 style="color: #ffcc00; text-align: center">"Bất đáo Trường Thành phi hảo hán"...</h1>
 	<div>Công ty du lịch Hoàn Mỹ vừa giới thiệu tour mới khám phá đất nước Trung Hoa xinh đẹp. Điểm dừng chân đầu tiên là Bắc Kinh, chinh phục Vạn Lý Trường Thành đồ sộ. Đến Thập Tam Lâm nghe những câu chuyện huyền bí trong quá trình xây lăng cùng với lời nguyền của các thầy pháp xưa. Tham quan Cung Điện Mùa Hè - nơi Từ Hy Thái Hậu cho "đào hồ, đắp núi, xây chùa".<br>
 	Đặc biệt, du khách đến thăm quảng trường lớn nhất thế giới: Thiên An Môn - nơi gây chấn động dư luận quốc tế một thời, ghé qua Cố Cung - biểu tượng của nền phong kiến lâu đời. Món vịt quay Bắc Kinh sẽ làm cho du khách khó quên trong chuyến hành trình.<br>
