--- a/index.html
+++ b/index.html
@@ -129,6 +129,14 @@
 					<li><a href="./bai12_1..html" target="thucdon">Bai 12 - Tao form va cac dieu khien (tt)</a></li>
 					<li><a href="./bai13_1.html" target="thucdon">Bai 13 - Tao form va cac dieu khien(tt)</a></li>
 					<li><a href="./bai16.html" target="thucdon">Bai 16 </a></li>
+					<li><a href="./dangkythanhvien.html">Dang ky thanh vien</a></li>
+					<li><a href="./itviec.html">ITviec</a></li>
+					<li><a href="./tamgiac.html">Tam giac</a></li>
+					<li><a href="./test.html">Test</a></li>
+					<li><a href="./thongtin.html">Thong tin</a></li>
+					<li><a href="./tiendien.html">Tien dien</a></li>
+					<li><a href="./tinhoccoban.html">Tin hoc co ban</a></li>
+					<li><a href="./tinhso.html">Tinh so</a></li>
 				</ul>
 			</td>
 			<td class="col2">
